Buscar usuarios. Usuario en formulario de atleta.

--- a/src/Easanles/AtletismoBundle/Resources/views/Atleta/form_atleta.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Atleta/form_atleta.html.twig
@@ -43,6 +43,10 @@
   {% endif %}
 {% endblock %}
 
+   {% block modallabel %}<div id="dialog-label"></div>{% endblock %}
+   {% block modalbody %}<div id="dialog-body"></div>{% endblock %}
+   {% block modalprimary %}<span id="dialog-btn"></span>{% endblock %}
+
 {% block container %}
    {% if mode == "new" %}
    <h1 id="container_title" class="row page-header">Añadir atleta</h1>
@@ -147,6 +151,25 @@
        <div class="col-xs-12 col-sm-6">
           <div class="row">
              <div class="form_row col-xs-12">
+                <label class="control-label">Usuario </label>
+                <span id="usu_nombre_display">
+                {% if form.usu_nombre.vars.value == "" %}<em class="text-muted">Ninguno</em>
+                {% else %}{{ form.usu_nombre.vars.value }}{% if form.usu_rol.vars.value == "coordinador" %} <strong class="text-info">Coordinador</strong>{% endif %}
+                {% endif %}
+                </span>
+                {% if mode == "new" %}
+                <button id="clear_usu" type="button" class="btn btn-default btn-xs{% if form.usu_nombre.vars.value == "" %} hidden{% endif %}" data-toggle="tooltip" data-placement="top" title="Quitar usuario" onClick="clearUsu()"><span class="glyphicon glyphicon-remove"></span></button>
+                <button id="asig_usu" type="button" class="btn btn-default pull-right" onClick="showModal('asigUSU', 'Crear usuario', null, null)">Crear usuario</button>
+                {% elseif mode == "edit" %}
+                   <button type="button" class="updater hidden" onClick="updateUsuRow({{ form.vars.value.id }})">
+                   <button id="asig_usu" type="button" class="btn btn-default pull-right{% if form.usu_nombre.vars.value != "" %} hidden{% endif %}" onClick="showModal('newUSU', '../../configuracion/usuario/nuevo', {{ form.vars.value.id }}, null)">Crear usuario</button>
+                   <button id="del_usu" type="button" class="btn btn-danger pull-right{% if form.usu_nombre.vars.value == "" %} hidden{% endif %}" onClick="showModal('delUSU', '../../configuracion/usuario/borrar', '{{ form.usu_nombre.vars.value }}', {{ form.vars.value.id }})">Borrar</button>   
+                   <button id="edi_usu" type="button" class="btn btn-default pull-right{% if form.usu_nombre.vars.value == "" %} hidden{% endif %}" onClick="showModal('ediUSU', '../../configuracion/usuario/editar/', '{{ form.usu_nombre.vars.value }}', {{ form.vars.value.id }})">Editar</button>   
+                {% endif %}
+             </div>
+          </div>
+          <div class="row">
+             <div class="form_row col-xs-12">
                 {{ form_row(form.notas) }}
              </div>
           </div>
@@ -170,6 +193,7 @@
 {% endblock %}
 
 {% block js %}
+   <script src="{{ asset('bundles/atletismo/js/modals.js') }}"></script>
    <script src="{{ asset('bundles/atletismo/js/scripts.js') }}"></script>
    <script type="text/javascript">
       var autoCompleteData = [];
