--- a/src/Easanles/AtletismoBundle/Resources/views/Atleta/list_atleta.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Atleta/list_atleta.html.twig
@@ -33,7 +33,7 @@
    {% block modalbody %}
    <p>¿Confirmar borrado del atleta <strong id="data1">***</strong>?</p>
    {% endblock %}
-   {% block modalprimary %}<a id="confirmbutton" type="button" class="btn btn-danger" href=""><span class="glyphicon glyphicon-remove"></span> Borrar</a>{% endblock %}
+   {% block modalprimary %}<button id="confirmbutton" type="button" class="btn btn-danger"><span class="glyphicon glyphicon-remove"></span> Borrar</button>{% endblock %}
 
 
 {% block container %}   
@@ -95,7 +95,7 @@
             </div>
             <div class="hidden-xs">
                <a type="button" class="btn btn-xs btn-default" data-toggle="tooltip" data-placement="top" title="Editar" href="{{ path('editar_atleta', {'id': atl.id}) }}"><span class="glyphicon glyphicon-edit"></span></a>
-               <button type="button" class="btn btn-xs btn-danger" data-toggle="tooltip" data-placement="top" title="Borrar" onClick="showModal('delATL', '{{ atl.apellidos }}, {{ atl.nombre }}', '{{ path('borrar_atleta', {'i': atl.id}) }}'), null"><span class="glyphicon glyphicon-remove"></span></button>
+               <button type="button" class="btn btn-xs btn-danger" data-toggle="tooltip" data-placement="top" title="Borrar" onClick="showModal('delATL', '{{ atl.apellidos }}, {{ atl.nombre }}', '{{ path('borrar_atleta', {'i': atl.id}) }}', null)"><span class="glyphicon glyphicon-remove"></span></button>
             </div>
          </td>
          </tr>
