--- a/src/Easanles/AtletismoBundle/Resources/views/Configuracion/menu_configuracion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Configuracion/menu_configuracion.html.twig
@@ -47,11 +47,11 @@
    <div class="config-content">
       <div id="tabcontent-usu" class="tabcontent" style="display:none">
          <div class="row">
-            <button type="button" class="btn btn-primary" onClick="showModal('newUSU', null, null, null)"><span class="glyphicon glyphicon-plus"></span> Añadir</button>
+            <button type="button" class="btn btn-primary" onClick="showModal('newUSU', './configuracion/usuario/nuevo', null, null)"><span class="glyphicon glyphicon-plus"></span> Añadir</button>
             <button id="updater-usu" class="btn btn-default updater hidden" onClick="loadViews('usu')"><span class="glyphicon glyphicon-refresh spinning"></span></button>
             <div class="input-group col-xs-6 col-sm-4 pull-right">
-               <input disabled id="search-input" type="search" class="form-control" placeholder="Buscar"{% if query is defined %} value="{{query}}"{% endif %} onkeydown="checkEnterKeypress(event)">
-               <div class="input-group-btn"><button disabled id="search-button" class="btn btn-default" type="button" onClick="usuSearch()"><span class="glyphicon glyphicon-search"></span></button></div>
+               <input id="search-input" type="search" class="form-control" placeholder="Buscar"{% if query is defined %} value="{{query}}"{% endif %} onkeydown="checkEnterKeypress(event)">
+               <div class="input-group-btn"><button id="search-button" class="btn btn-default" type="button" onClick="usuSearch($('#search-input').val())"><span class="glyphicon glyphicon-search"></span></button></div>
             </div>
          </div>
          <div class="row">
