--- a/src/Easanles/AtletismoBundle/Resources/views/Informes/pant_records.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Informes/pant_records.html.twig
@@ -14,6 +14,7 @@
       <li class="dropdown active">
          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Records <span class="caret"></span></a>
          <ul class="dropdown-menu">
+            {% if app.user is not null and app.user.idAtl is not null %}<li><a class="inactive" href="#">Mis records</a></li>{% endif %}
             <li><a href="{{ path('pantalla_records_masc') }}">Records masculinos</a></li>
             <li><a href="{{ path('pantalla_records_fem') }}">Records femeninos</a></li>
          </ul>
