--- a/src/Easanles/AtletismoBundle/Resources/views/Default/adminIndex.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Default/adminIndex.html.twig
@@ -29,7 +29,59 @@
   <li class="active">Portada Admin</li>
 {% endblock %}
 
-{% block container %}   
+{% block container %}
+
+   {% if hoyComs|length > 0 %}
+      <h2>Hoy</h2>
+      {% for com in hoyComs %}
+      <div class="panel panel-default">
+         <div class="panel-heading">
+            <h3 class="panel-title">{{ com.nombre }}
+            <span>
+            {% if com.esVisible == 1 %}
+            <button id="btn-vis-{{ com.sid }}" type="button" class="btn btn-sm btn-info active pull-right" data-toggle="tooltip" data-placement="top" title="Visible" onClick="toggleIndexBtn(this, false)"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></button>
+            {% else %}
+            <button id="btn-vis-{{ com.sid }}" type="button" class="btn btn-sm btn-default pull-right" data-toggle="tooltip" data-placement="top" title="Oculto" onClick="toggleIndexBtn(this, false)"><span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span></button>
+            {% endif %}
+            </span>
+            </h3>
+            <div class="clearfix"></div>
+         </div>
+         <div class="panel-body row">
+            <div class="col-xs-4 col-sm-3 col-md-2">
+               {% if com.cartel is not null %}
+                  <img src="{{ vich_uploader_asset(com, 'cartelFile', 'Easanles\\AtletismoBundle\\Entity\\Competicion') }}" alt="{{ com.nombre }}" class="img-responsive thumbnail" />
+               {% else %}
+                  {% image '@EasanlesAtletismoBundle/Resources/assets/img/sincartel.jpg' %}
+                     <img src="{{ asset_url }}" alt="{{ com.nombre }}" class="img-responsive thumbnail"/>
+                  {% endimage %}
+               {% endif %}
+               <div class="visible-xs"><a type="button" class="btn btn-sm btn-block btn-default" href="{{ path('ver_competicion', {'id': com.sid}) }}" data-toggle="tooltip" data-placement="top" title="Ver información"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Ver</a></div>
+            </div>
+            <div class="col-xs-8 col-sm-9 col-md-10">
+               <div class="row">
+                  <div class="hidden-xs col-sm-6 col-md-8">
+                     <table class="table">
+                        <tbody>
+                           <tr><th>Sede</th><td>{{ com.sede }}</td></tr>
+                           {% if com.web is not null %}{% if com.web != "" %}<tr><th>Web</th><td><a href="{{ com.web }}">{{ com.web }}</a></td></tr>{% endif %}{% endif %}
+                           <tr><td colspan="2"><strong>Descripción:</strong> {{ com.desc|nl2br }}</th></tr>
+                           <tr><td colspan="2"><a type="button" class="btn btn-sm btn-default" href="{{ path('ver_competicion', {'id': com.sid}) }}"><span class="glyphicon glyphicon-info-sign" aria-label="Más información"></span> Más información</a></td></tr>
+                        </tbody>
+                     </table>
+                  </div>
+                  <div class="col-xs-12 col-sm-6 col-md-4">
+                     <a type="button" class="btn btn-block btn-{% if com.numpruebas == 0 %}warning{% else %}default{% endif %}" href="{{ path('listado_pruebas', {'sidCom': com.sid}) }}"><span class="glyphicon glyphicon-list-alt"></span> Lista de pruebas <span class="badge">{{ com.numpruebas }}</span></a>
+                     <a type="button" class="btn btn-block btn-{% if com.numatletas == 0 %}warning{% else %}default{% endif %}"{% if com.numpruebas == 0 %} disabled{% endif %} href="{{ path('listado_inscripciones', {'sidCom': com.sid}) }}"><span class="glyphicon glyphicon-user"></span> Atletas inscritos <span class="badge">{{ com.numatletas }}</span></a>
+                     <a type="button" disabled class="btn btn-block btn-default" href="#"><span class="glyphicon glyphicon-hand-up" aria-hidden="true"></span> Control de asistencia</a>
+                     <a type="button" class="btn btn-lg btn-block btn-primary" href="{{ path('registrar_intentos', {'com': com.sid}) }}"><span class="glyphicon glyphicon-dashboard" aria-label="Registrar marcas"></span> Registrar marcas</a>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+      {% endfor %}
+   {% endif %}
 
    <h2>Próximas competiciones</h2>
    <table class="table table-hover table-bordered table-striped table-responsive">
@@ -38,42 +90,33 @@
          <th>Competición</th>
          <th class="hidden-xs">Sede</th>
          <th>Fecha</th>
-         <th class="hidden-xs">Atletas inscritos</div></th>
+         <th><abbr title="Atletas inscritos" class="visible-xs-block">Atl.</abbr><div class="hidden-xs">Atletas inscritos</div></th>
          <th>Visible</th>
          <th><abbr title="Tipo / abrir inscripciones" class="visible-xs-block">Tipo/abrir</abbr><div class="hidden-xs">Tipo / Abrir insc.</div></th>
-         <th><abbr title="Control de asistencia" class="visible-xs-block">Asist.</abbr><div class="hidden-xs">Control asistencia</div></th>
-         <th><abbr title="Registrar marcas" class="visible-xs-block">Reg. mar.</abbr><div class="hidden-xs">Registrar marcas</div></th>
       </tr>
       {% for com in sigComs %}
-         {% if com.fecha is not null %}{% if com.fecha|date('Y-m-d') == hoy|date('Y-m-d')%}
-            {% set hoy = true %}
-         {% else %}
-            {% set hoy = false %}
-         {% endif %}{% endif %}
-         <tr{% if hoy %} class="bg-info"{% endif %}>
+         <tr>
             <td>
             {% if com.cartel is not null %}
-               <img id="pic-img" width="20" src="{{ vich_uploader_asset(com, 'cartelFile', 'Easanles\\AtletismoBundle\\Entity\\Competicion') }}" alt="{{ com.nombre }}" />
+               <img id="pic-img" height="30" src="{{ vich_uploader_asset(com, 'cartelFile', 'Easanles\\AtletismoBundle\\Entity\\Competicion') }}" alt="{{ com.nombre }}" />
             {% endif %}<span><a href="{{ path('ver_competicion', {'id': com.sid}) }}">{{ com.nombre }}</a></span></td>
             <td class="hidden-xs">{{ com.sede }}</td>
-            <td>{% if hoy%}<strong class="text-info">HOY</strong>{% elseif com.fecha is null %} <em class="text-muted">Sin fecha</em> {% else %} {{ com.fecha|date('d/m/Y') }} {% endif %} </td>
-            <td class="hidden-xs{% if com.numatletas == 0 %} warning text-warning{% endif %}">{{ com.numatletas }} <a type="button" class="btn btn-sm btn-{% if com.numatletas == 0 %}warning{% else %}default{% endif %} pull-right"{% if com.numpruebas == 0 %} disabled{% endif %} data-toggle="tooltip" data-placement="top" title="Inscribir atletas" href="{{ path('listado_inscripciones', {'sidCom': com.sid}) }}"><span class="glyphicon glyphicon-user"></span></a></td>
+            <td>{% if com.fecha is null %} <em class="text-muted">Sin fecha</em> {% else %} {{ com.fecha|date('d/m/Y') }} {% endif %} </td>
+            <td{% if com.numatletas == 0 %} class="warning text-warning"{% endif %}>{{ com.numatletas }} <a type="button" class="btn btn-sm btn-{% if com.numatletas == 0 %}warning{% else %}default{% endif %} pull-right"{% if com.numpruebas == 0 %} disabled{% endif %} data-toggle="tooltip" data-placement="top" title="Inscribir atletas" href="{{ path('listado_inscripciones', {'sidCom': com.sid}) }}"><span class="glyphicon glyphicon-user"></span></a></td>
             <td>
             {% if com.esVisible == 1 %}
-            <button id="btn-vis-{{ com.sid }}" type="button" class="btn btn-sm btn-block btn-info active" data-toggle="tooltip" data-placement="top" title="Visible" onClick="toggleIndexBtn(this)"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> <strong>SI</strong></button>
+            <button id="btn-vis-{{ com.sid }}" type="button" class="btn btn-sm btn-block btn-info active" data-toggle="tooltip" data-placement="top" title="Visible" onClick="toggleIndexBtn(this, true)"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> <strong>SI</strong></button>
             {% else %}
-            <button id="btn-vis-{{ com.sid }}" type="button" class="btn btn-sm btn-block btn-default" data-toggle="tooltip" data-placement="top" title="Oculto" onClick="toggleIndexBtn(this)"><span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span> <strong>NO</strong></button>
+            <button id="btn-vis-{{ com.sid }}" type="button" class="btn btn-sm btn-block btn-default" data-toggle="tooltip" data-placement="top" title="Oculto" onClick="toggleIndexBtn(this, true)"><span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span> <strong>NO</strong></button>
             {% endif %}
             </td>
             <td>{% if com.esFeder == 1 %}FEDERADA{% elseif com.esOficial == 1 %}OFICIAL{% else %}
                {% if com.esInscrib == 1 %}
-               <button id="btn-ins-{{ com.sid }}" type="button" class="btn btn-sm btn-block btn-info active" data-toggle="tooltip" data-placement="top" title="Inscripciones abiertas" onClick="toggleIndexBtn(this)"><span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span> <strong>Abie.</strong></button>
+               <button id="btn-ins-{{ com.sid }}" type="button" class="btn btn-sm btn-block btn-info active" data-toggle="tooltip" data-placement="top" title="Inscripciones abiertas" onClick="toggleIndexBtn(this, true)"><span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span> <strong>Abie.</strong></button>
                {% else %}
-               <button id="btn-ins-{{ com.sid }}" type="button" class="btn btn-sm btn-block btn-default" data-toggle="tooltip" data-placement="top" title="Inscripciones cerradas" onClick="toggleIndexBtn(this)"><span class="glyphicon glyphicon-lock" aria-hidden="true"></span> <strong>Cerr.</strong></button>
+               <button id="btn-ins-{{ com.sid }}" type="button" class="btn btn-sm btn-block btn-default" data-toggle="tooltip" data-placement="top" title="Inscripciones cerradas" onClick="toggleIndexBtn(this, true)"><span class="glyphicon glyphicon-lock" aria-hidden="true"></span> <strong>Cerr.</strong></button>
                {% endif %}
             {% endif %}</td>
-            <td><a type="button" disabled class="btn btn-sm btn-block btn-default" data-toggle="tooltip" data-placement="top" title="Control de asistencia" href="#"><span class="glyphicon glyphicon-hand-up" aria-hidden="true"></span></a></td>
-            <td><a type="button" class="btn btn-sm btn-block {% if hoy %}btn-primary{% else %}btn-default{% endif %}" data-toggle="tooltip" data-placement="top" title="Registrar marcas" href="{{ path('registrar_intentos', {'com': com.sid}) }}"><span class="glyphicon glyphicon-dashboard" aria-label="Registrar marcas"></span></a></td>
          </tr>
       {% endfor %}
    </tbody>
@@ -85,9 +128,21 @@
          <th>Competición</th>
          <th class="hidden-xs">Sede</th>
          <th>Fecha</th>
-         <th class="hidden-xs">Núm. atletas</th>
-         <th><abbr title="Ver resultados" class="visible-xs-block">Res.</abbr><div class="hidden-xs">Ver resultados</div></th>
+         <th>Núm. atletas</th>
+         <th class="hidden-xs">Tipo</th>
+         <th><div class="visible-xs-block">Resultados</div><div class="hidden-xs">Ver resultados</div></th>
       </tr>
+      {% for com in prevComs %}
+         <td>
+        {% if com.cartel is not null %}
+           <img id="pic-img" height="30" src="{{ vich_uploader_asset(com, 'cartelFile', 'Easanles\\AtletismoBundle\\Entity\\Competicion') }}" alt="{{ com.nombre }}" />
+        {% endif %}<span><a href="{{ path('ver_competicion', {'id': com.sid}) }}">{{ com.nombre }}</a></span></td>
+        <td class="hidden-xs">{{ com.sede }}</td>
+        <td>{% if com.fecha is null %} <em class="text-muted">Sin fecha</em> {% else %} {{ com.fecha|date('d/m/Y') }} {% endif %} </td>
+        <td>{{ com.numatletas }} <a type="button" class="btn btn-sm btn-default pull-right"{% if com.numpruebas == 0 %} disabled{% endif %} data-toggle="tooltip" data-placement="top" title="Lista de atletas" href="{{ path('listado_inscripciones', {'sidCom': com.sid}) }}"><span class="glyphicon glyphicon-user"></span></a></td>
+        <td class="hidden-xs">{% if com.esFeder == 1 %}FEDERADA{% elseif com.esOficial == 1 %}OFICIAL{% else %}NO OFICIAL{% endif %}</td>
+        <td><a type="button" class="btn btn-sm btn-block btn-default" data-toggle="tooltip" data-placement="top" title="Resultados" href="{{ path('pantalla_resultados', {'com': com.sid}) }}"><span class="glyphicon glyphicon-list"></span>  Ver resultados</a></td>
+      {% endfor %}
    </tbody>
    </table>
    
