--- a/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
@@ -31,7 +31,7 @@
   </div>
 </div>
 
-   <nav class="navbar navbar-inverse navbar-fixed-top">
+   <nav class="navbar navbar-inverse{#navbar-fixed-top#}" style="margin-bottom: 0px">
       <div class="container-fluid">
          <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
