--- a/src/Easanles/AtletismoBundle/Resources/views/Intento/form_intento.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Intento/form_intento.html.twig
@@ -1,5 +1,5 @@
    
-   <div class="well">
+   <div class="well well-sm">
       <h4 class="text-center">{{ atleta }}</h4>
       <div class="text-center">{{ ronda }}</div>
    </div>
@@ -13,6 +13,7 @@
 {{ form_start(form, {'action': path('crear_intento', {'ron': sidRon, 'atl': idAtl})}) }}
 
     {{ form_errors(form) }}
+    <div class="subform panel panel-default">
     <div class="panel-body">
     <table class="table table-condensed">
        <tbody{% if numIntentos > 1 %} id="form-collection" data-prototype='
@@ -85,6 +86,7 @@
 
           </tbody>
     </table>
+    </div>
     </div>
     {% if numIntentos > 1 %}
        <div style="text-align: center"><button id="btn-addInt" type="button" class="btn btn-default" onClick="addFormRow();checkIntentos()"><span class="glyphicon glyphicon-plus" aria-label="Añadir"></span> Añadir intento</button></td>
