--- a/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
@@ -45,15 +45,20 @@
          <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                {% block navbar %}
-               {% if app.user is not null and is_granted('ROLE_USER') and not is_granted('ROLE_ADMIN') %}<li><a class="inactive" href="#">Mis competiciones</a></li>{% endif %}
+               {% if app.user is not null and app.user.idAtl is not null %}<li><a href="{{ path('mis_competiciones') }}">Mis competiciones</a></li>{% endif %}
                {% if app.user is not null and is_granted('ROLE_ADMIN') %}<li><a href="{{ path('listado_atletas') }}">Atletas</a></li>{% endif %}
                {% if app.user is not null and is_granted('ROLE_ADMIN') %}<li><a href="{{ path('listado_competiciones') }}">Competiciones</a></li>{% endif %}
                <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Records <span class="caret"></span></a>
                   <ul class="dropdown-menu">
                      {% if app.user is not null and app.user.idAtl is not null %}<li><a class="inactive" href="#">Mis records</a></li>{% endif %}
-                     <li><a href="{{ path('pantalla_records_masc') }}">Records masculinos</a></li>
-                     <li><a href="{{ path('pantalla_records_fem') }}">Records femeninos</a></li>
+                     {% if app.user is not null and is_granted('ROLE_ADMIN') %}
+                        <li><a href="{{ path('pantalla_records_masc') }}">Records masculinos</a></li>
+                        <li><a href="{{ path('pantalla_records_fem') }}">Records femeninos</a></li>
+                     {% else %}
+                        <li><a href="{{ path('users_pantalla_records_masc') }}">Records masculinos</a></li>
+                        <li><a href="{{ path('users_pantalla_records_fem') }}">Records femeninos</a></li>
+                     {% endif %}
                   </ul>
                </li>
                {% if app.user is not null and is_granted('ROLE_ADMIN') %}<li class="dropdown">
