--- a/src/Easanles/AtletismoBundle/Resources/views/Informes/pant_resultados.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Informes/pant_resultados.html.twig
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block navbar %}
-      {% if app.user is not null and is_granted('ROLE_USER') and not is_granted('ROLE_ADMIN') %}<li><a class="inactive" href="#">Mis competiciones</a></li>{% endif %}
+      {% if app.user is not null and app.user.idAtl is not null %}<li><a href="{{ path('mis_competiciones') }}">Mis competiciones</a></li>{% endif %}
       {% if app.user is not null and is_granted('ROLE_ADMIN') %}<li><a href="{{ path('listado_atletas') }}">Atletas</a></li>{% endif %}
       {% if app.user is not null and is_granted('ROLE_ADMIN') %}<li><a href="{{ path('listado_competiciones') }}">Competiciones</a></li>{% endif %}
       <li class="dropdown">
@@ -105,9 +105,11 @@
             {% endif %}
             </div>
             <div id="no-pic-div"{% if selCom is defined %}{% if selCom.cartel is not null %} style="display:none"{% endif %}{% endif %}>
-               {% image '@EasanlesAtletismoBundle/Resources/assets/img/sincartel.jpg' %}
-               <img src="{{ asset_url }}" alt="{{ selCom.nombre }}" class="img-responsive thumbnail"/>
-               {% endimage %}
+               {% if selCom is defined %}
+                  {% image '@EasanlesAtletismoBundle/Resources/assets/img/sincartel.jpg' %}
+                  <img src="{{ asset_url }}" alt="{{ selCom.nombre }}" class="img-responsive thumbnail"/>
+                  {% endimage %}
+               {% endif %}
             </div>
          </div>
       </div>
